# hexan

./: CMakeLists.txt  README.md  hexan.cpp  setup.sh
include/: formatter.h  hexan.h
scripts/: setup.sh
src/: formatter.cpp  hexan.cpp  main.cpp
